Make getElementsByTagName(NS) in XUL use content lists (perf, etc).  Bug 189384, r=sicking, sr=jst, a=asa